--- a/DataMajor/First_Swipe/0003.KafkaAndRealTimeStreaming.md
+++ b/DataMajor/First_Swipe/0003.KafkaAndRealTimeStreaming.md
@@ -440,5 +440,204 @@ KEY RULES
 **"Explain Kafka's delivery guarantees — at-most-once, at-least-once, and exactly-once. How does Kafka achieve exactly-once semantics and why does it matter specifically for Capital One's transaction processing?"**
 
 
+# Feedback First
+
 ---
+
+## What You Nailed ✅
+
+**The letter analogy for at-most-once** — perfect. Simple, memorable, accurate. Interviewers remember analogies.
+
+**At-least-once default behavior** — correctly identified it as the Kafka default and correctly explained the retry/duplicate tradeoff.
+
+**Idempotent producers** — correctly explained unique ID + sequence number mechanism. Spot on.
+
+**Transactions as atomic bundles** — "all or nothing" framing is exactly right. Read + process + write + commit offset as one atomic unit is the correct mental model.
+
+**The banking consequence framing** — "charging someone twice" and "missing a payment" are concrete business consequences that resonate with a Capital One interviewer specifically. Very strong.
+
+**Regulators stay happy** — mentioning compliance signals you understand the financial services context beyond just engineering.
+
+---
+
+## What to Tighten Up 🔧
+
+**Missing the ISR — In-Sync Replicas connection.** Exactly-once is not just about producers and transactions — the broker side matters too:
+
+*"On the broker side, exactly-once requires acks=all combined with min.insync.replicas=2 — meaning a write is only confirmed when at least 2 in-sync replicas have persisted it. Without this, a broker could acknowledge a write and then die before replication, silently losing the message."*
+
+**Missing the consumer side of exactly-once.** You explained the producer side well but the consumer side needs one more sentence:
+
+*"On the consumer side, exactly-once means reading from Kafka, processing the event, and committing the offset all happen atomically in a single transaction. The consumer never commits the offset until it has successfully written the result — so if it crashes mid-process, it replays from the last committed offset and the transaction prevents the duplicate from being written downstream."*
+
+**Missing Kafka Streams vs manual transactions.** Worth one sentence:
+
+*"In practice, if you're using Kafka Streams, exactly-once is a single configuration — processing.guarantee=exactly_once_v2. If you're using a custom consumer, you have to manage the transaction API manually, which is more complex but gives you more control."*
+
+---
+
+# Model Answer
+
+---
+
+*"Kafka offers three delivery guarantees, each representing a different tradeoff between performance and correctness.*
+
+**At-most-once** — the producer fires and forgets. No retries, no acknowledgment waiting. The message might arrive once or might be lost entirely if a broker goes down mid-write. It's the fastest option but completely unacceptable for financial transactions. Think of it like sending a letter with no tracking — it might arrive, or it might disappear.*
+
+**At-least-once** — the producer waits for acknowledgment and retries if it doesn't receive one. This guarantees no message is ever lost, but if the broker received the message and then crashed before sending the acknowledgment, the producer retries and the message arrives twice. Duplicates are possible. This is Kafka's default behavior — safe from loss but requires downstream systems to be idempotent, meaning they can handle receiving the same message twice without corrupting state.*
+
+**Exactly-once** — every message is processed precisely one time. No loss, no duplication, even during failures, retries, and network partitions. This is the gold standard and the only acceptable guarantee for a financial institution like Capital One.*
+
+**How Kafka achieves exactly-once — four layers working together:**
+
+*Layer 1 — Idempotent Producers. Each producer is assigned a unique Producer ID. Every message gets a monotonically increasing sequence number. When a producer retries a message, the broker checks the sequence number — if it has already seen that sequence number from that Producer ID, it silently discards the duplicate without writing it twice. This handles the producer-to-broker leg of the journey.*
+
+*Layer 2 — Producer Transactions. Multiple writes across multiple topics and partitions can be grouped into a single atomic transaction. Either all writes commit or none do. This handles scenarios where your pipeline reads from one topic, transforms the data, and writes to another — if the write succeeds but the process crashes before committing the offset, the transaction rolls back and replays cleanly without producing duplicates downstream.*
+
+*Layer 3 — Broker Acknowledgment. On the broker side, acks=all combined with min.insync.replicas=2 means a write is only confirmed as successful when at least 2 in-sync replicas have persisted it to disk. Without this, a broker could acknowledge a write and die before replication, silently losing the message even with idempotent producers enabled.*
+
+*Layer 4 — Atomic Offset Commits. On the consumer side, reading the message, processing it, writing the result, and committing the offset all happen inside a single transaction. The offset is never committed until the result is successfully written downstream. If the consumer crashes mid-process, it replays from the last committed offset — and the transaction prevents the duplicate result from being written, giving you exactly-once end to end.*
+
+**Why this matters specifically for Capital One:**
+
+*In banking, the consequences of getting delivery guarantees wrong are immediate and severe. A duplicate transaction means a customer is charged twice — a direct financial harm and a regulatory violation. A lost transaction means a payment disappears — also a regulatory violation and a potential fraud vector where someone claims they paid when the system shows they didn't.*
+
+*Beyond individual transactions, exactly-once matters for the aggregate state. Your fraud detection system is watching for patterns — 10 transactions in 5 minutes, a sudden large transfer to a new country. If transactions are duplicated, the fraud model sees false velocity. If transactions are lost, it misses real fraud. Either way the model's decisions are corrupted.*
+
+*For settlement and reconciliation — where Capital One balances its books at end of day — any duplication or loss creates discrepancies that require expensive manual investigation and can trigger regulatory scrutiny.*
+
+*Exactly-once is not a nice-to-have in financial services. It is a hard requirement."*
+
+---
+
+# Delivery Guarantees Diagram
+
+```
+DELIVERY GUARANTEES — SIDE BY SIDE
+╔═══════════════════════════════════════════════════════════════════════╗
+║                                                                       ║
+║  AT-MOST-ONCE          AT-LEAST-ONCE         EXACTLY-ONCE            ║
+║  ─────────────         ─────────────         ────────────            ║
+║  Producer sends        Producer sends        Producer sends          ║
+║  message               message               message                 ║
+║       │                     │                     │                  ║
+║       ▼                     ▼                     ▼                  ║
+║  No retry              Waits for ACK         Waits for ACK           ║
+║  if failure                 │                + sequence ID           ║
+║       │                     ▼                     │                  ║
+║       ▼              Broker crashes?         Broker crashes?         ║
+║  Message lost?              │                     │                  ║
+║  ¯\_(ツ)_/¯           Yes → retry            Yes → retry             ║
+║                             │                     │                  ║
+║                             ▼                     ▼                  ║
+║                       DUPLICATE ❌          Broker checks            ║
+║                       message arrives       sequence ID              ║
+║                       twice                      │                   ║
+║                                            Already seen?             ║
+║                                            Yes → discard ✅          ║
+║                                            No  → write ✅            ║
+║                                                                       ║
+║  Data Loss:  POSSIBLE    NEVER              NEVER                    ║
+║  Duplicates: POSSIBLE    POSSIBLE           NEVER                    ║
+║  Performance: FASTEST    FAST               SLIGHTLY SLOWER          ║
+║  Use for:    Metrics/    Most general       Financial transactions    ║
+║              Logs        pipelines          Banking, Payments         ║
+╚═══════════════════════════════════════════════════════════════════════╝
+
+
+HOW EXACTLY-ONCE WORKS — THE FOUR LAYERS
+╔═══════════════════════════════════════════════════════════════════════╗
+║                                                                       ║
+║  LAYER 1 — IDEMPOTENT PRODUCER                                        ║
+║  ─────────────────────────────                                        ║
+║  Producer ID: P001                                                    ║
+║  Message: T001  Sequence: 1  ──────────► Broker writes ✅             ║
+║  Message: T001  Sequence: 1  ──────────► Broker: seen seq 1          ║
+║  (retry due to network blip)              from P001 → DISCARD ✅      ║
+║                                                                       ║
+║  LAYER 2 — PRODUCER TRANSACTIONS                                      ║
+║  ────────────────────────────────                                     ║
+║  BEGIN TRANSACTION                                                    ║
+║    Write to topic: fraud-alerts  ──────► Broker holds (pending)      ║
+║    Write to topic: audit-log     ──────► Broker holds (pending)      ║
+║  COMMIT TRANSACTION              ──────► Both writes visible ✅       ║
+║                                                                       ║
+║  If crash before COMMIT:                                              ║
+║  ROLLBACK                        ──────► Neither write visible ✅     ║
+║  No partial state. Ever.                                              ║
+║                                                                       ║
+║  LAYER 3 — BROKER ACKNOWLEDGMENT                                      ║
+║  ────────────────────────────────                                     ║
+║                                                                       ║
+║  Producer ──► Broker 1 (Leader)  ──► Broker 2 (Follower) ✅          ║
+║                                  ──► Broker 3 (Follower) ✅          ║
+║               ACK only sent after                                     ║
+║               min.insync.replicas=2 confirmed                        ║
+║               acks=all                                                ║
+║                                                                       ║
+║  LAYER 4 — ATOMIC OFFSET COMMIT                                       ║
+║  ──────────────────────────────                                       ║
+║                                                                       ║
+║  BEGIN TRANSACTION                                                    ║
+║    Read from transactions topic  (offset 500)                        ║
+║    Process fraud rules                                                ║
+║    Write result to fraud-alerts                                       ║
+║    Commit offset 500             ──────► All atomic ✅                ║
+║  COMMIT                                                               ║
+║                                                                       ║
+║  If crash after write but before commit:                              ║
+║    Replay from offset 499                                             ║
+║    Transaction prevents duplicate write ✅                            ║
+║    Offset advances correctly ✅                                       ║
+║                                                                       ║
+╚═══════════════════════════════════════════════════════════════════════╝
+
+
+CONFIGURATION FOR EXACTLY-ONCE AT CAPITAL ONE
+━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+  Producer side:
+  enable.idempotence          = true
+  acks                        = all
+  retries                     = Integer.MAX_VALUE
+  max.in.flight.requests      = 1
+
+  Broker side:
+  min.insync.replicas         = 2
+  replication.factor          = 3
+
+  Consumer / Stream side:
+  isolation.level             = read_committed
+  processing.guarantee        = exactly_once_v2  (Kafka Streams)
+━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+
+
+THE BUSINESS CONSEQUENCE AT CAPITAL ONE
+╔═══════════════════════════════════════════════════════════════════════╗
+║                                                                       ║
+║  DUPLICATE TRANSACTION                LOST TRANSACTION                ║
+║  ─────────────────────                ───────────────                ║
+║  Customer charged twice ❌            Payment disappears ❌           ║
+║  Fraud model sees false velocity ❌   Fraud model misses pattern ❌   ║
+║  Settlement books don't balance ❌    Reconciliation fails ❌         ║
+║  Regulatory violation ❌              Regulatory violation ❌         ║
+║  Customer calls angry ❌              Fraud claim filed ❌            ║
+║                                                                       ║
+║  EXACTLY-ONCE                                                         ║
+║  ─────────────                                                        ║
+║  Every transaction processed once ✅                                  ║
+║  Fraud model sees real history ✅                                     ║
+║  Books balance at settlement ✅                                       ║
+║  Regulators satisfied ✅                                              ║
+║  Customers trust the bank ✅                                          ║
+║                                                                       ║
+╚═══════════════════════════════════════════════════════════════════════╝
+```
+
+---
+
+## Question 5 — Final Boss 🏆
+
+**"Your Kafka cluster at Capital One is showing signs of consumer lag — consumers are falling behind producers and the lag is growing. Walk me through how you diagnose it, what the root causes might be, and how you fix it."**
+
+🎯
 
